video-extract/front/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: video-extract-frontend-svc
  namespace: default
spec:
  selector:
    app: video-extract-frontend
  ports:
  - port: 80
    targetPort: 80
