video-extract/front/frontend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: video-extract-frontend-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    external-dns.alpha.kubernetes.io/hostname: video-extract.awesomeapps.cloud
    external-dns.alpha.kubernetes.io/ttl: "120"
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "true"
  labels:
    name: frontend-ingress
spec:
  tls:
    - hosts:
      - "video-extract.awesomeapps.cloud"
      secretName: "video-extract-frontend-tls"
  rules:
  - host: video-extract.awesomeapps.cloud
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: video-extract-frontend-svc
            port:
              number: 80
